ipc/ipdl/test/ipdl/error/spawnsSubprotocol.ipdl
include protocol subprotocolSpawns;

protocol spawnsSubprotocol {
    parent spawns subprotocolSpawns;

    manages subprotocolSpawns;

child:
    subprotocolSpawns();
    async __delete__();

state DEAD: send __delete__;
};
